JavaScript-Core-3-Coursework-Week2

--- a/JavaScript-Core-3-Coursework-Week2/exercises/fetch-exercise/index.html
+++ b/JavaScript-Core-3-Coursework-Week2/exercises/fetch-exercise/index.html
@@ -6,6 +6,13 @@
     <meta name="description" content="Introduction to Fetch" />
     <meta name="author" content="CodeYourFuture" />
     <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 2rem;
+      }
       #greeting-text {
         font-size: 20px;
         border: 1px solid #ccc;
